# matchy

./: .gitattributes  .gitignore  BATCH_PROCESSING_PROPOSAL.md  BENCHMARKING_STRATEGY.md  BENCHMARK_QUICKSTART.md  CASE_SENSITIVITY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ENDIANNESS.md  ENDIANNESS_SUMMARY.md  FUZZ_TARGETS_SUMMARY.md  MMDB_INTEGRATION_DESIGN.md  MMDB_QUICKSTART.md  MMDB_STAGING_PLAN.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  VALIDATION.md  WARP.md  build.rs  cbindgen.toml  commit_msg.txt  fuzz_quickstart.sh  test-batch-sizes.sh
.cargo/: config.toml
.github/: PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
benches/: batch_bench.rs  cache_bench.rs  extractor_bench.rs  matchy_bench.rs  mmdb_build_bench.rs  paraglob_bench.rs  query_profile.rs
benchmarks/: README.md  SYMLINK_SETUP.md
benchmarks/baseline_post-state-encoding_20251012_143920/: metadata.json
benchmarks/baseline_post-state-encoding_20251012_143920/case_sensitivity/insensitive/change/: estimates.json
benchmarks/baseline_post-state-encoding_20251012_143920/case_sensitivity/insensitive/new/: benchmark.json
benchmarks/baseline_post-state-encoding_20251012_143920/match/report/: index.html
benchmarks/baseline_post-state-encoding_20251012_143920/memory_efficiency/report/: index.html
benchmarks/baseline_post-state-encoding_20251012_143920/report/: index.html
benchmarks/baseline_pre-optimization_20251012_105652/case_sensitivity/report/: index.html
benchmarks/criterion_data/: metadata.json
benchmarks/criterion_data/case_sensitivity/sensitive/report/: index.html
benchmarks/criterion_data/load/report/: index.html
benchmarks/criterion_data/serialization/report/: index.html
book/: README.md  book.toml  custom.css  run-cmdrun.sh
book/mdbook-project-version/: Cargo.toml  README.md
book/mdbook-project-version/src/: main.rs
book/src/: SUMMARY.md  benchmark-quickstart.md  benchmarking-strategy.md  changelog.md  contributing.md  development.md  faq.md  first-database.md  installation.md  introduction.md  mmdb-integration-design.md  mmdb-quickstart.md  performance-optimizations.md  quick-start.md
book/src/_archived/: alignment.md  endianness.md  state-encoding.md
book/src/appendix/: examples.md  glossary.md
book/src/architecture/: binary-format.md  overview.md  performance-results.md  performance.md
book/src/commands/: index.md  matchy-bench.md  matchy-build.md  matchy-extract.md  matchy-inspect.md  matchy-match.md  matchy-query.md  matchy-validate.md  matchy.md
book/src/dev/: benchmarking.md  building.md  ci-checks.md  fuzz-targets.md  fuzzing.md  releasing.md  symlink-setup.md  testing.md
book/src/getting-started/: api-c-first.md  api-installation.md  api-rust-first.md  api.md  cli-first-database.md  cli-installation.md  cli.md  first-steps.md  index.md  installation.md
book/src/guide/: caching.md  creating-a-database.md  data-types.md  database-concepts.md  entry-types.md  extraction.md  index.md  ips-and-cidr.md  migrating-libmaxminddb.md  mmdb-compatibility.md  patterns.md  performance.md  querying.md  why-matchy-exists.md
book/src/reference/: architecture.md  benchmarks.md  binary-format.md  c-api.md  c-building.md  c-installation.md  c-memory.md  c-querying.md  data-types-ref.md  database-builder.md  database-query.md  error-handling-ref.md  examples.md  index.md  input-formats.md  mmdb-integration.md  project-setup.md  rust-api.md  validation-api.md
book/src/user-guide/: c-api.md  c-building.md  c-memory.md  c-querying.md  cli-bench.md  cli-build.md  cli-inspect.md  cli-query.md  cli-workflows.md  cli.md  data-types.md  database-builder.md  input-formats.md  querying.md  rust-api.md
docs/: ALIGNMENT_IMPROVEMENTS.md  ARCHITECTURE_PROPOSAL.md  CI-CHECKS.md  CODE_EXECUTION_SAFETY.md  C_INSTALLATION.md  FUZZING_GUIDE.md  IP_TREE_VALIDATION.md  PERFORMANCE_RESULTS.md  POINTER_VALIDATION.md  STATE_ENCODING_OPTIMIZATION.md  VALIDATION_AUDIT_MODE.md
examples/: README.md  audit_database.rs  build_combined_database.rs  build_ip_database.rs  build_misp_database.rs  cache_demo.rs  combined_query.rs  cpp_comparison_test.rs  custom_metadata.rs  endianness_demo.rs  enhanced_api_test.c  extractor_demo.rs  generate_logs.rs  geoip_query.rs  glob_demo.rs  hash_build_bench.rs  hash_demo.rs  incremental_builder.rs  large_scale_ip_benchmark.rs  parallel_processing.rs  prefix_convention.rs  production_test.rs  test_hash_speed.rs  test_v3_performance.rs  update-psl.rs  zero_alloc_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_data_values.rs  fuzz_database_load.rs  fuzz_glob_patterns.rs  fuzz_ip_lookup.rs  fuzz_literal_exact_match.rs  fuzz_lookup.rs  fuzz_pattern_matching.rs
include/: matchy.h  paraglob_rs.h
include/matchy/: matchy.h  matchy.hpp  maxminddb.h
include/paraglob/: matchy.hpp  paraglob.hpp
scripts/: README.md  benchmark_baseline.sh  benchmark_compare.sh  benchmark_report.sh  save_current_as_baseline.sh  test-workflows.sh
src/: ac_literal_hash.rs  ac_offset.rs  data_section.rs  database.rs  endian.rs  error.rs  extractor.rs  extractor.rs.bak  file_reader.rs  glob.rs  ip_tree_builder.rs  lib.rs  literal_hash.rs  literal_mph.rs  misp_importer.rs  mmap.rs  mmdb_builder.rs  offset_format.rs  paraglob_offset.rs  processing.rs  serialization.rs  simd_utils.rs  validation.rs
src/binary/: format.rs  mod.rs  validation.rs
src/c_api/: matchy.rs  maxminddb_compat.rs  mmdb_varargs.c  mod.rs
src/cpp/: matchy.cpp  paraglob.cpp
src/data/: tld_automaton.ac
src/mmdb/: format.rs  mod.rs  tree.rs  types.rs
tests/: cli_tests.rs  debug_ip_tree.rs  integration_tests.rs  test_alignment.rs  test_c_api  test_c_api.c  test_c_api_extensions  test_c_api_extensions.c  test_cpp_api  test_cpp_api.cpp  test_ip_exact_match.rs  test_ip_longest_prefix_match.rs  test_literal_hash.rs  test_mmdb_compat  test_mmdb_compat.c
tools/update-psl/: Cargo.toml  README.md
tools/update-psl/src/: main.rs
(+707 files in other folders)
