[package]
name = "paraglob-rs"
version = "0.3.1"
edition = "2021"
authors = ["Seth Hall <seth@remor.com>"]
license = "BSD-2-Clause"
description = "Fast multi-pattern glob matching using Aho-Corasick (Rust port)"
repository = "https://github.com/sethhall/paraglob-rs"
readme = "README.md"
keywords = ["glob", "pattern", "aho-corasick", "mmap", "ffi"]
categories = ["text-processing", "algorithms"]

[lib]
name = "paraglob_rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "paraglob"
path = "src/bin/paraglob.rs"

[dependencies]
# Keep minimal initially - add as needed
libc = "0.2"
memmap2 = "0.9.8"
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing dependencies
criterion = "0.7"
proptest = "1.4"
tempfile = "3.8"
rand = "0.9"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false  # Keep symbols for debugging initially

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"

[[bench]]
name = "paraglob_bench"
harness = false
