[package]
name = "matchy"
version = "0.5.0"
edition = "2021"
authors = ["Seth Hall <seth@remor.com>"]
license = "BSD-2-Clause"
description = "Fast database for IP address and pattern matching with rich data storage"
repository = "https://github.com/sethhall/matchy"
readme = "README.md"
keywords = ["ip", "pattern", "database", "geoip", "matching"]
categories = ["network-programming", "database", "algorithms"]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "matchy"
path = "src/bin/matchy.rs"

[dependencies]
# Keep minimal initially - add as needed
libc = "0.2"
memmap2 = "0.9.8"
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustc-hash = "2.0"  # Fast FxHash for literal pattern lookups
csv = "1.3"

[dev-dependencies]
# Testing dependencies
criterion = "0.7"
proptest = "1.4"
tempfile = "3.8"
rand = "0.9"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging initially
debug = true   # Enable debug info for profiling

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"

[[bench]]
name = "matchy_bench"
harness = false
