[package]
name = "matchy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.matchy]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_database_load"
path = "fuzz_targets/fuzz_database_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pattern_matching"
path = "fuzz_targets/fuzz_pattern_matching.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ip_lookup"
path = "fuzz_targets/fuzz_ip_lookup.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_glob_patterns"
path = "fuzz_targets/fuzz_glob_patterns.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_data_values"
path = "fuzz_targets/fuzz_data_values.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_literal_exact_match"
path = "fuzz_targets/fuzz_literal_exact_match.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lookup"
path = "fuzz_targets/fuzz_lookup.rs"
test = false
doc = false
bench = false
